# umb_nuwro

./: .gitignore  CMakeLists.txt  Makefile  README
data/beam/: beam_mixedhist.txt  beam_singlehist.txt  beamhist_miniboone_fhc.txt  beamhist_miniboone_rhc.txt  beamhist_nd280_fhc.txt  miniboone_flux_fhc.root  miniboone_flux_rhc.root  nd280_flux_fhc.root
src/: CMakeLists.txt  EnergyProfile.h  Interaction.h  Makefile  RooTrackerEvent.cc  RooTrackerEvent.h  args.h  beam_mixed.h  beam_uniform.h  boone1.h  coh.cc  dirs.cc  dumpParams.cc  event1.h  event1LinkDef.h  ff.cc  ff.h  fsi_main.cc  kaskada7.cc  kinematics.cc  niwg.cc  nucleus.cc  nucleus.h  nuwro.cc  nuwro2rootracker.cc  params.h  params.xml  params_all.h  particle.cc  particle.h  pdg.h  qel_sigma.cc  target_mixer.cc  target_mixer.h  test_reweight_CCQE_rootracker.cc  vecrand.h  vect.h
src/dis/: CMakeLists.txt  alfa.cc  alfa.h  delta.cc  delta.h  pdg_name.h  resevent.cc  resevent2.cc  singlepion.cc
src/reweight/: CMakeLists.txt  NuwroEventLoaders.h  NuwroReWeight.cc  NuwroReWeight.h  NuwroReWeightSimple.h  NuwroReWeightSimpleEvent.h  NuwroReWeight_BBBA07.cc  NuwroReWeight_BBBA07.h  NuwroReWeight_FlagNorm.cc  NuwroReWeight_FlagNorm.h  NuwroReWeight_MECNorm.cc  NuwroReWeight_MECNorm.h  NuwroReWeight_MaCCQE.cc  NuwroReWeight_MaCCQE.h  NuwroReWeight_MaRES_CA5.cc  NuwroReWeight_MaRES_CA5.h  NuwroReWeight_QEL.cc  NuwroReWeight_QEL.h  NuwroReWeight_SPP.cc  NuwroReWeight_SPP.h  NuwroSyst.cc  NuwroSyst.h  NuwroSystSet.cc  NuwroSystSet.h  NuwroSystUncertainty.cc  NuwroSystUncertainty.h  NuwroWghtEngineI.h  PythiaQuiet.f  RooTrackerEvent.cc  RooTrackerEvent.h
src/rpa/: CMakeLists.txt
src/sf/: CMakeLists.txt  CSFOptions.cc
src/vali/: CMakeLists.txt  NuWroValid.dox  SAF_Analysis.cc  SimpleAnalysisFormat.cc  SimpleAnalysisFormat.h  ValiPlotter.cc  ValiPlotter.h
src/vali/reweight/: CMakeLists.txt  PlotDialVars.cc.in
src/vali/reweight/SPPBkgScale/: make_vali_plot.sh
src/vali/reweight/SPPDISBkgScale/: make_vali_plot.sh
src/vali/reweight/apps/: CMakeLists.txt  DialUtils.h  DumpDialTweaks.cc  SimpleFitter.cc  SimpleFitterProfiler.cc  SimpleReweighter.cc  SimpleReweighterMemChecker.cc  SimpleReweighterProfiler.cc  SimpleReweighterTest.cc
src/vali/reweight/ca5/: make_vali_plot.sh
src/vali/reweight/maqe/: Plot_maqe_reweight_valid.cxx  make_vali_plot.sh
src/vali/reweight/maqe_mecnorm/: make_vali_plot.sh
src/vali/reweight/mares/: make_vali_plot.sh
src/vali/reweight/mares_ca5/: make_vali_plot.sh
src/vali/reweight/mecnorm/: make_vali_plots.sh
src/vali/reweight/scripts/: build_reweight_vali_plotscript.sh  generate_reweight_vali_data.sh  reweight_vali_script_base.sh
src/vali/reweight/test_reweighter/: CMakeLists.txt  test_SimpleFitter.cc  test_SimpleFitterInterface.cc  test_SimpleReweighter.cc  test_reweighter.cc
src/vali/simple_rootracker_analysis/: CMakeLists.txt  SimpleAnalysisFormat.cc  SimpleAnalysisFormat.h
